tests/ui/impl-trait/in-trait/issue-102571.current.stderr
error[E0308]: mismatched types
  --> $DIR/issue-102571.rs:23:9
   |
LL |     let () = t.bar();
   |         ^^   ------- this expression has type `impl Deref<Target = impl std::fmt::Display + ?Sized>`
   |         |
   |         expected associated type, found `()`
   |
   = note: expected associated type `impl Deref<Target = impl std::fmt::Display + ?Sized>`
                    found unit type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
